kubernetes/deployment.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: yin-web-deployment
  namespace: yin-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yin-web-app
  template:
    metadata:
      labels:
        app: yin-web-app
    spec:
      containers:
      - name: yin-web-app-image
        image: europe-west9-docker.pkg.dev/yin-resume/yin-resume/yin-resume-web-image:${TAG}
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
---
