kubernetes/ingress.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yin-resume-web-ingress
  namespace: yin-ns
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "yincodeworld-cert"
    kubernetes.io/ingress.global-static-ip-name: "yin-resume-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: "yin-resume-web-frontend-config"
spec:
  rules:
  - host: cv.yincodeworld.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: yin-resume-web-service
            port:
              number: 80
---
